# yourConnector

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: release-android.yml  release-linux.yml  sync-release-to-oss.yml
app/mobile/: README.md
app/mobile/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
app/mobile/src-tauri/android/: MainActivity.kt  SecureStoreBridge.kt
app/mobile/src-tauri/src/: lib.rs  main.rs
app/mobile/ui/: index.html
app/mobile/ui/js/: main.js
app/mobile/ui/js/flows/: chat.js  connection-auth.js  connection-events.js  connection-send.js  connection-socket-events.js  connection-socket.js  connection.js  host-delete-errors.js  host-delete-remote.js  host-delete.js  host-manage.js  pairing-errors.js  pairing-run.js  pairing-scan.js  pairing.js  queue-dispatcher.js  tool-manage.js
app/mobile/ui/js/modals/: add-tool.js  host-notice.js  pair-failure.js  report-viewer.js  tool-detail.js
app/mobile/ui/js/services/: pairing-link.js  relay-api.js  tauri.js  ws.js
app/mobile/ui/js/state/: chat.js  hosts.js  runtime.js  store.js  ui-refs.js
app/mobile/ui/js/utils/: dom.js  format.js  (+7 more)
app/mobile/ui/styles/: base.css  components.css  layout.css  modals.css  tools.css
docs/: API与事件协议.md  CLI与环境变量.md  MVP-架构设计-v0.md  代码事实总索引.md  代码治理与注释规范-v1.md  代码治理与注释规范.md  分发安装与卸载-v1.md  分发安装与卸载.md  初步共识.md  安装与环境准备-v0.md  工具接入核心组件-v1.md  已完成功能验收-v1.md  已完成功能验收.md  开发与调试指南.md  技术栈锁定-v0.md  接口草案-v0.md  文档导航-v2.md  文档导航.md  架构与数据流.md  系统日志与归档-v1.md  系统日志与归档.md  质量门禁与检查规范-v1.md  质量门禁与检查规范.md  跨宿主联调测试-v1.md  跨宿主联调测试.md  里程碑与待办-v1.md  里程碑与待办.md
docs/工具详情与数据采集/: 00-能力总览与代码边界.md  01-openclaw.v1-详情模型.md  02-opencode.v1-详情模型.md  03-采集调度与降级策略.md
docs/聊天与报告/: 00-能力总览与代码边界.md  01-页面交互与会话模型.md  02-事件协议与执行链路.md  03-代码映射与验收口径.md
docs/运维与工具管理/: 00-能力总览与代码边界.md  01-页面交互与状态机.md  02-协议事件与失败处理.md  03-代码映射与验收口径.md
docs/配对与宿主机接入/: 00-设计总览与决策-v1.md  00-设计总览与决策.md  01-用户流程与页面交互-v1.md  01-用户流程与页面交互.md  02-协议与安全方案-v1.md  02-协议与安全方案.md  03-实施计划与验收-v1.md  03-实施计划与验收.md
protocol/rust/: Cargo.toml
protocol/rust/src/: lib.rs
protocol/schema/: event-envelope-v1.json
scripts/: check-doc-consistency.sh  check-governance.sh  pairing.sh  self-debug-loop.sh
scripts/mobile/: ensure-android-camera-permissions.sh  sign-android-apk.sh
services/relay/: Cargo.toml
services/relay/src/: app.rs  logging.rs  main.rs  state.rs
services/relay/src/api/: error.rs  mod.rs  response.rs  types.rs
services/relay/src/auth/: handlers.rs  mod.rs  pop.rs  store.rs  token.rs  token_crypto.rs
services/relay/src/auth/handlers/: devices.rs  http.rs  mod.rs  refresh.rs  revoke.rs  verify.rs
services/relay/src/cli/: mod.rs
services/relay/src/pairing/: bootstrap.rs  handlers.rs  mod.rs  ticket.rs
services/relay/src/pairing/handlers/: bootstrap.rs  exchange.rs  http.rs  mod.rs  preflight.rs  ticket.rs
services/relay/src/ws/: envelope.rs  handlers.rs  mod.rs
services/relay/src/ws/handlers/: auth.rs  http.rs  mod.rs
services/sidecar/: Cargo.toml
services/sidecar/src/: config.rs  control.rs  logging.rs  main.rs  runtime.rs  stores.rs  tooling.rs
services/sidecar/src/cli/: mod.rs  pairing.rs  relay.rs
services/sidecar/src/discoverers/: mod.rs  openclaw.rs  opencode.rs
services/sidecar/src/pairing/: banner.rs  bootstrap_client.rs  mod.rs
services/sidecar/src/session/: loop.rs  mod.rs  snapshots.rs  transport.rs
services/sidecar/src/session/loop/: chat.rs  command.rs  mod.rs  report.rs  url.rs
services/sidecar/src/session/queue/: mod.rs
services/sidecar/src/tooling/: cli_parse.rs  mod.rs  num.rs  opencode_session.rs  tool_id.rs
services/sidecar/src/tooling/adapters/: claude_code.rs  codex.rs  mod.rs  openclaw.rs  opencode.rs
services/sidecar/src/tooling/core/: cache.rs  mod.rs  scheduler.rs  types.rs
services/sidecar/src/tooling/opencode_session/: cache.rs  fs.rs  mod.rs  types.rs
(+6 files in other folders)
