[package]
name = "yc-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
hmac.workspace = true
sevenz-rust.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
url.workspace = true
uuid.workspace = true
yc-shared-protocol = { path = "../../protocol/rust" }
