[package]
name = "yourconnector-mobile-tauri"
version = "0.1.0"
edition = "2024"
description = "yourConnector mobile app (Tauri)"

[lib]
name = "yourconnector_mobile_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
security-framework = "2.11"
